examples/test/testpolicy18235.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18235
  namespace: namespace221
spec:
  podSelector:
    matchLabels:
      key46: value19
      key4: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value7
      podSelector:
        matchLabels:
          key20: value7
          key29: value17
